--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ bitstruct==8.11.1
 comm==0.2.3
 debugpy==1.8.17
 decorator==5.2.1
+duckdb==1.4.2
 et_xmlfile==2.0.0
 executing==2.2.1
 fit-tool==0.9.13
+fitdecode==0.11.0
 fitparse==1.2.0
 ipykernel==7.1.0
 ipython==9.7.0
@@ -16,8 +18,10 @@ jupyter_client==8.6.3
 jupyter_core==5.9.1
 matplotlib-inline==0.2.1
 nest-asyncio==1.6.0
+numpy==2.4.0
 openpyxl==2.5.12
 packaging==25.0
+pandas==2.3.3
 parso==0.8.5
 pexpect==4.9.0
 platformdirs==4.5.0
@@ -27,11 +31,14 @@ prompt_toolkit==3.0.52
 psutil==7.1.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==22.0.0
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
+pytz==2025.2
 pyzmq==27.1.0
 six==1.17.0
 stack-data==0.6.3
 tornado==6.5.2
 traitlets==5.14.3
+tzdata==2025.3
 wcwidth==0.2.14
